--- a/todo/Todo.API/Todo.API/Todo.API.csproj
+++ b/todo/Todo.API/Todo.API/Todo.API.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
